# fusion-stat

./: Makefile  README.md  pyproject.toml
.github/workflows/: test-suite.yml
fusion_stat/: __init__.py  _index.py  api.py  base.py  competition.py  competitions.py  config.py  fusion.py  items.py  match.py  matches.py  member.py  models.py  refactored_models.py  scraper.py  team.py  utils.py
fusion_stat/clients/: __init__.py  base.py  fbref.py  fotmob.py
fusion_stat/downloaders/: __init__.py  base.py  fbref.py  fotmob.py  wikipedia.py
fusion_stat/fusion/: __init__.py  _utils.py  base.py  competition.py  competitions.py  member.py  player.py  team.py
fusion_stat/models/: __init__.py  base.py  competition.py  competitions.py  match.py  matches.py  member.py  team.py
fusion_stat/spiders/: __init__.py  bundesliga.py  fbref.py  fotmob.py  la_liga.py  laliga.py  ligue_1.py  official.py  premier_league.py  premierleague.py  serie_a.py  transfermarkt.py  wikipedia.py
fusion_stat/spiders/fbref/: __init__.py  competition.py  competitions.py  match.py  matches.py  player.py  team.py
fusion_stat/spiders/fotmob/: __init__.py  _common.py  competition.py  competitions.py  match.py  matches.py  player.py  staff.py  team.py
fusion_stat/spiders/official/: __init__.py  _common.py  competition.py  competitions.py
fusion_stat/spiders/transfermarkt/: __init__.py  _common.py  competition.py  competitions.py  player.py  staff.py  staffs.py  team.py
fusion_stat/static/: competitions_index.json
fusion_stat/types/: __init__.py  base_types.py  competition_types.py  competitions_types.py  matches_types.py  member_types.py  player_types.py  staff_types.py  team_types.py
script/: init.py
tests/: conftest.py  test_api.py  test_base.py  test_competition.py  test_competitions.py  test_config.py  test_fusion.py  test_index.py  test_match.py  test_matches.py  test_member.py  test_refactored_models.py  test_scraper.py  test_team.py  test_utils.py  utils.py
tests/clients/: conftest.py  test_base.py  test_fbref.py  test_fotmob.py
tests/data/bundesliga/: assets_historic_season_2021-2022.json  assets_historic_season_2022-2023.json  en_bundesliga_clubs.html
tests/data/fbref/: comps_.html  comps_9_Premier-League-Stats.html  (+4 more)
tests/downloaders/: conftest.py  test_base.py  test_fbref.py  test_fotmob.py  test_wikipedia.py
tests/models/: test_competition.py  test_competitions.py  test_match.py  test_matches.py  test_member.py  test_player.py  test_staff.py  test_team.py
tests/spiders/: test_bundesliga.py  test_fbref.py  test_fotmob.py  test_la_liga.py  test_laliga.py  test_ligue_1.py  test_official.py  test_premier_league.py  test_premierleague.py  test_serie_a.py  test_transfermarkt.py  test_wikipedia.py
(+18 files in other folders)
