[tool.poetry]
name = "fusion-stat"
version = "0.0.4"
description = "Scrape football data from multiple sources simultaneously."
authors = ["tanzhijian <tanzhijianorg@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fusion_stat"}]
homepage = "https://github.com/tanzhijian/fusion-stat"
repository = "https://github.com/tanzhijian/fusion-stat"

[tool.poetry.dependencies]
python = ">=3.10"
parsel = "^1.8.1"
rapidfuzz = "^3.6.1"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
mypy = "^1.8.0"
ruff = "^0.1.11"
respx = "^0.20.2"
trio = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I"]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests",]
