[tool.poetry]
name = "fusion-stat"
version = "0.0.9"
description = "Scrape football data from multiple sources simultaneously."
authors = ["tanzhijian <tanzhijianorg@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fusion_stat"}]
homepage = "https://github.com/tanzhijian/fusion-stat"
repository = "https://github.com/tanzhijian/fusion-stat"

[tool.poetry.dependencies]
python = ">=3.10"
parsel = "^1.9.0"
rapidfuzz = "^3.6.2"
httpx = "^0.27.0"
fifacodes = "^0.1.4"
pydantic = "^2.6.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.3"
respx = "^0.21.0"
trio = "^0.25.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["E", "F", "I"]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests",]
